--- a/website/style.css
+++ b/website/style.css
@@ -15,7 +15,6 @@ body {
   font-size: 20px;
   font-family: "Oswald", sans-serif;
 }
-
 .holder {
 }
 
@@ -24,6 +23,9 @@ body {
 }
 
 #entryHolder {
+  background-color: orange;
+  max-width: 800px;
+  word-wrap: break-word;
 }
 
 #date {
