--- a/website/style.css
+++ b/website/style.css
@@ -6,26 +6,46 @@ body {
 #app {
   display: grid;
   grid-auto-rows: minmax(150px, auto);
-  /* grid-template-columns:  */
-  height: 100vh;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  height: fit-content;
   background: #f23557;
   color: #f0d43a;
-  justify-content: center;
-  grid-gap: 1em;
+  justify-content: space-around;
+  
   font-size: 20px;
   font-family: "Oswald", sans-serif;
 }
 .holder {
+  padding: 10px 20px;
+}
+
+
+.holder.zip {
+  grid-column-start: 1;
+  grid-column-end:2;
+}
+
+#zip,
+#feelings {
+  padding : 2px 15px;
 }
 
 .entry {
   background: rgba(59, 74, 107, 0.4);
+  padding: 10px;
+  margin: 20px 30px;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 #entryHolder {
-  background-color: orange;
   max-width: 800px;
+  min-height: 400px;
   word-wrap: break-word;
+}
+#generate {
+  margin: 25px 10px;
 }
 
 #date {
@@ -38,10 +58,12 @@ body {
 }
 
 .headline {
+  font-size: 3em;
+  margin-bottom: 30px;
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end:3;
 }
-.title {
-}
-
 /*  Basic Styling To Override Default For Basic HTML Elements */
 label {
   display: block;
@@ -60,6 +82,7 @@ input {
 }
 
 button {
+  display: block;
   width: 400px;
   height: 100px;
   background: #3b4a6b;
